tests/behavior/error/optional_get_value_ref1.bz
function main()
{
	let i: ?int32 = null;

	__builtin_optional_get_value_ref(i);
}
